--- a/.gitignore
+++ b/.gitignore
@@ -7,11 +7,15 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
+# Build output
 node_modules
 dist
-out/
+out
 dist-ssr
 *.local
+
+# Keys
+neardev
 
 # Editor directories and files
 .vscode/*
