--- a/package.json
+++ b/package.json
@@ -3,8 +3,14 @@
   "private": true,
   "version": "0.0.0",
   "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
+    "build": "npm run build:contract && npm run build:web",
+    "build:contract": "node contract/compile.js",
+    "build:contract:debug": "node contract/compile.js --debug",
+    "build:web": "tsc && vite build",
+    "dev:deploy:contract": "near dev-deploy",
+    "prestart": "npm run build:contract:debug && npm run dev:deploy:contract",
+    "start": "env-cmd -f neardev/dev-account.env vite",
+    "dev": "nodemon --watch contract/src -e rs --exec \"npm run start\"",
     "preview": "vite preview"
   },
   "dependencies": {
@@ -12,9 +18,12 @@
     "react-dom": "^18.0.0"
   },
   "devDependencies": {
+    "@types/node": "^17.0.31",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "@vitejs/plugin-react": "^1.3.0",
+    "env-cmd": "^10.1.0",
+    "nodemon": "^2.0.16",
     "shelljs": "^0.8.5",
     "typescript": "^4.6.3",
     "vite": "^2.9.7"
