--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "near-api-js": "^0.44.2",
     "react": "^18.0.0",
     "react-dom": "^18.0.0"
   },
