--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "near-api-js": "^0.44.2",
+    "buffer": "^6.0.3",
+    "near-api-js": "git+https://github.com/near/near-api-js.git",
     "react": "^18.0.0",
     "react-dom": "^18.0.0"
   },
